# daily-workspace

./: .ai-testing-rules.yml  .cursorrules  .dockerenv  .gitignore  .tourienv.example  AGENTS.md  ANDROID_APP.md  ANDROID_QUICKSTART.md  ANDROID_SETUP.md  ARCHITECTURE.md  BACKUP_RESTORE_GUIDE.md  BACKUP_VERIFICATION.md  BACKWARD_COMPATIBILITY.md  CLEANUP_SUMMARY.md  COMPONENTS_UPDATE_STATUS.md  DATABASE_AUDIT_REPORT.md  DATA_SAFETY_GUARANTEE.md  DEPLOYMENT_STATUS.md  FEATURES.md  FEATURE_SUMMARY.md  FIX_MIC_ACCESS.md  HTTPS_SETUP.md  INDEX.md  MIGRATION.md  MIGRATION_GUIDE.md  MOBILE_ACCESS.md  MOBILE_CAMERA_FIX.md  PRODUCTION_UPGRADE_SIMPLE.md  PROJECT_SUMMARY.md  PR_DESCRIPTION.md  PR_DESCRIPTION_ANDROID.md  PR_DESCRIPTION_MOBILE.md  QUICKSTART.md  QUICK_FIX_SSL.md  QUICK_REFERENCE.md  README.md  RENAME_SUMMARY.md  RESET_BROWSER_PERMISSIONS.md  SERVICE_CREDENTIALS_SETUP.md  TAURI_STATUS.md  (+17 more)
backend/: .gitignore  Dockerfile  build_sidecar.py  desktop_launcher.py  fix_localhost_urls.py  fix_timezone_entries.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_lint.sh  run_tests.sh  start.sh
backend/app/: database.py  db_init.py  main.py  models.py  schemas.py  storage_paths.py
backend/migrations/: 001_add_title_field.py  010_fix_localhost_urls.py  011_add_goal_fields.py  012_move_goals_to_settings.py  013_add_goal_date_fields.py  014_fix_timezone_entries.py  015_create_goal_tables.py  016_add_lists_feature.py  017_add_pinned_entries.py  018_add_list_labels.py  019_add_kanban_support.py  025_add_reminders.py  (+9 more)
src-tauri/: Cargo.toml  tauri.conf.json
(+255 files in other folders)
